Lib4 almost done

--- a/package.yaml
+++ b/package.yaml
@@ -45,6 +45,7 @@ library:
   - transformers
   - strict
   - deepseq
+  - mtl
 
 executables:
   fp2024-one:
@@ -94,6 +95,8 @@ executables:
     - wreq
     - bytestring
     - string-conversions
+    - mtl
+    - free
   fp2024-four-server:
     main:                Main.hs
     source-dirs:         app4-server
@@ -106,7 +109,8 @@ executables:
     - repline
     - scotty
     - string-conversions
-
+    - mtl
+    - stm
 tests:
   fp2024-test:
     main:                Spec.hs
